Add universal Paper compatibility
This commit updates the plugin to target a Java 8 / Paper 1.16.5-compatible runtime while keeping a modern Paper 26.2 compile check in Gradle. It adds a shaded release build, optional LuckPerms integration, async AI HTTP clients, and Java 8-safe API value classes without breaking the existing plugin contract. The change also documents the public API and architecture, and updates config/plugin metadata for the universal Paper JAR approach.